--- a/2-tier/apache-docker/apache-static-only/docker-compose.yml
+++ b/2-tier/apache-docker/apache-static-only/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"  # optional since v1.27.0
 services:
   server:
-     image: generic-ntier/apache-vanilla
+     image: generic-ntier/apache-staticonly
      build:
        context: .
-       dockerfile: Dockerfile_apache
+       dockerfile: Dockerfile_apache_staticonly
      ports:
      - "8081:80"
